--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,6 @@ Thumbs.db
 # Android Studio
 *.iml
 .idea
-#.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
 .gradle
 build/
+gradle*
