--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,10 @@ apply plugin: 'com.android.library'
 
 buildscript {
     repositories {
-        mavenCentral()
-        maven { url 'https://maven.google.com' }
+        jcenter()
+        maven {
+            url 'https://maven.google.com'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0-alpha2'
@@ -17,7 +19,7 @@ android {
         minSdkVersion 14
         targetSdkVersion 25
         versionCode 2
-        versionName "1.1"
+        versionName "1.2"
     }
     buildTypes {
         release {
