--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,10 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="org.angmarch.views">
+    package="org.angmarch.views">
 
-    <application android:allowBackup="true"
-                 android:label="@string/app_name"
-            >
-
-    </application>
-
+    <application android:allowBackup="true" />
 </manifest>
