--- a/build.gradle
+++ b/build.gradle
@@ -7,15 +7,15 @@ buildscript {
         maven { url 'https://maven.google.com' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-beta7'
+        classpath 'com.android.tools.build:gradle:3.1.0-alpha04'
     }
 }
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 27
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 25
+        targetSdkVersion 27
     }
 }
 
@@ -25,6 +25,5 @@ dependencies {
         google()
         maven { url 'https://maven.google.com' }
     }
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.4.0'
+    implementation 'com.android.support:appcompat-v7:27.0.1'
 }
