--- a/build.gradle
+++ b/build.gradle
@@ -7,15 +7,7 @@ buildscript {
         maven { url 'https://maven.google.com' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.0-alpha04'
-    }
-}
-
-android {
-    compileSdkVersion 27
-    defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 27
+        classpath 'com.android.tools.build:gradle:3.2.1'
     }
 }
 
@@ -25,5 +17,5 @@ dependencies {
         google()
         maven { url 'https://maven.google.com' }
     }
-    implementation 'com.android.support:appcompat-v7:27.0.1'
+    implementation ('androidx.legacy:legacy-support-v4:1.0.0-beta01')
 }
