--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,12 @@
 buildscript {
+    ext.kotlin_version = '1.3.31'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0-alpha11'
+        classpath 'com.android.tools.build:gradle:3.5.0-beta01'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
