only support androidx

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,14 @@
-apply plugin: 'com.android.application'
-
+plugins {
+    id 'com.android.application'
+}
 android {
-    compileSdkVersion 28
+    namespace 'org.angmarc.app'
+    compileSdkVersion 33
+
     defaultConfig {
         applicationId "org.angmarc.app"
-        minSdkVersion 16
-        targetSdkVersion 28
+        minSdkVersion 21
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
     }
@@ -19,6 +22,6 @@ android {
 dependencies {
     implementation project(":library")
 
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 }
